--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -124,3 +124,5 @@
   booktitle={NeurIPS 2024 Workshop on Behavioral Machine Learning},
   year={2024}
 }
+
+@Jinyi6 ➜ /workspaces/Jinyi6.github.io (main) $ academic import content/publication/publications.bib content/publication/ --compact
