--- a/content/publication/publications.bib
+++ b/content/publication/publications.bib
@@ -125,4 +125,14 @@
   year={2024}
 }
 
+@misc{cheng2025dualragdualprocessapproachintegrate,
+      title={DualRAG: A Dual-Process Approach to Integrate Reasoning and Retrieval for Multi-Hop Question Answering}, 
+      author={Rong Cheng and Jinyi Liu and YAN ZHENG and Fei Ni and Jiazhen Du and Hangyu Mao and Fuzheng Zhang and Bo Wang and Jianye HAO},
+      year={2025},
+      eprint={2504.18243},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2504.18243}, 
+}
+
 @Jinyi6 ➜ /workspaces/Jinyi6.github.io (main) $ academic import content/publication/publications.bib content/publication/ --compact
