--- a/content/publication/cheng-2025-dualragdualprocessapproachintegrate/cite.bib
+++ b/content/publication/cheng-2025-dualragdualprocessapproachintegrate/cite.bib
@@ -1,9 +1,9 @@
-@misc{cheng2025dualragdualprocessapproachintegrate,
- archiveprefix = {arXiv},
- author = {Rong Cheng and Jinyi Liu and YAN ZHENG and Fei Ni and Jiazhen Du and Hangyu Mao and Fuzheng Zhang and Bo Wang and Jianye HAO},
- eprint = {2504.18243},
- primaryclass = {cs.LG},
- title = {DualRAG: A Dual-Process Approach to Integrate Reasoning and Retrieval for Multi-Hop Question Answering},
- url = {https://arxiv.org/abs/2504.18243},
- year = {2025}
+@inproceedings{cheng2025dualragdualprocessapproachintegrate,
+  author    = {Rong Cheng and Jinyi Liu and YAN ZHENG and Fei Ni and Jiazhen Du and Hangyu Mao and Fuzheng Zhang and Bo Wang and Jianye HAO},
+  title     = {DualRAG: A Dual-Process Approach to Integrate Reasoning and Retrieval for Multi-Hop Question Answering},
+  booktitle = {Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (ACL 2025)},
+  year      = {2025},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://arxiv.org/abs/2504.18243},
+  note      = {Accepted as a long paper at the ACL 2025 Main Conference. arXiv preprint: 2504.18243.},
 }
